tenant API wip + tenant APNS API working
